--- a/Web2.html
+++ b/Web2.html
@@ -63,7 +63,7 @@
         </div>
 		
 		<div class="recipe-card">
-            <img src="Images/Pittu.jpeg" alt="">
+            <img src="Images/pittu.jpeg" alt="">
             <h2>Sri Lankan Pittu - pittu / Kurakkan Pittu</h2>
             <p>"Hearty Delight: Sri Lankan Pittu Recipe"</p>
             <a href="pittu.html">View Recipe</a>
