--- a/polos.html
+++ b/polos.html
@@ -40,7 +40,7 @@
       <h2>Enjoy your Sri Lankan Polos Curry!</h2>
     </article>
     <aside>
-      <img src="Images/Polos.jpg" alt="Sri Lankan Polos Curry">
+      <img src="Images/POLOS.jpg" alt="Sri Lankan Polos Curry">
     </aside>
   </main>
   <footer>
