--- a/curries.html
+++ b/curries.html
@@ -40,7 +40,7 @@
     <h1>Curry Recipes</h1>
     <div class="recipe-section">
         <div class="recipe-card">
-            <img src="Images/Polos.jpg" alt="">
+            <img src="Images/POLOS.jpg" alt="">
             <h2>Sri Lankan baby Jack fruit Curry - Polos curry</h2>
             <p>"Wow! Wow!Sri Lankan Polos Curry Delight"</p>
             <a href="polos.html">View Recipe</a>
