--- a/Sweets.html
+++ b/Sweets.html
@@ -40,7 +40,7 @@
     <h1>Sweets Recipes</h1>
     <div class="recipe-section">
         <div class="recipe-card">
-            <img src="Images/kokis.png" alt="">
+            <img src="Images/kokis.png" alt="Sri Lankan Kokis">
             <h2>Sri Lankan Kokis snack - Kokis</h2>
             <p>"Sri Lankan Kokis Delight"</p>
             <a href="kokis.html">View Recipe</a>
