--- a/moju.html
+++ b/moju.html
@@ -40,7 +40,7 @@
       <h2>Enjoy your Sri Lankan Wambatu Moju!</h2>
     </article>
     <aside>
-      <img src="Images/wambatu_moju.jpg" alt="Sri Lankan Wambatu Moju">
+      <img src="Images/moju.jpg" alt="Sri Lankan Wambatu Moju">
     </aside>
   </main>
   <footer>
