--- a/nduwalalu.html
+++ b/nduwalalu.html
@@ -34,7 +34,7 @@
       <h2>Enjoy your Sri Lankan Undu Walalu!</h2>
     </article>
     <aside>
-      <img src="Images/Undu walalu.jpg" alt="Sri Lankan Undu Walalu">
+      <img src="Images/undu walalu.jpg" alt="Sri Lankan Undu Walalu">
     </aside>
   </main>
   <footer>
